--- a/news-analysis-project/.github/workflows/huggingface.yml
+++ b/news-analysis-project/.github/workflows/huggingface.yml
@@ -24,5 +24,6 @@ jobs:
         huggingface-cli login ${{ secrets.HUGGINGFACE_TOKEN }}
     - name: Push to Hugging Face
       run: |
-        huggingface-cli repo create your-space-name
-        git push https://huggingface.co/spaces/your-username/your-space-name
+         huggingface-cli repo create ${{ secrets.HF_SPACE_NAME }} --type=space --exist-ok
+         git remote add space https://huggingface.co/spaces/your-username/${{ secrets.HF_SPACE_NAME }}
+         git push space main
