--- a/news-analysis-project/.github/workflows/huggingface.yml
+++ b/news-analysis-project/.github/workflows/huggingface.yml
@@ -25,5 +25,5 @@ jobs:
     - name: Push to Hugging Face
       run: |
          huggingface-cli repo create ${{ secrets.HF_SPACE_NAME }} --type=space --exist-ok
-         git remote add space https://huggingface.co/spaces/your-username/${{ secrets.HF_SPACE_NAME }}
-         git push space main
+         huggingface-cli repo create your-space-name --type space --exist-ok
+         git push https://huggingface.co/spaces/Avantika16/news-sentiment-analysis main
