--- a/news-analysis-project/.github/workflows/huggingface.yml
+++ b/news-analysis-project/.github/workflows/huggingface.yml
@@ -21,9 +21,8 @@ jobs:
     - name: Login to Hugging Face
       run: |
         pip install huggingface_hub
-        huggingface-cli login ${{ secrets.HUGGINGFACE_TOKEN }}
+        huggingface-cli login --token ${{ secrets.HUGGINGFACE_TOKEN }}
     - name: Push to Hugging Face
       run: |
-         huggingface-cli repo create ${{ secrets.HF_SPACE_NAME }} --type=space --exist-ok
-         huggingface-cli repo create your-space-name --type space --exist-ok
+         huggingface-cli repo create news-sentiment-analysis e --type space --exist-ok
          git push https://huggingface.co/spaces/Avantika16/news-sentiment-analysis main
